--- a/src/components/cronometro/Cronometro.module.scss
+++ b/src/components/cronometro/Cronometro.module.scss
@@ -24,14 +24,19 @@
   
     button {
       background-color: #88bcd1;
-      border-radius: 10px;
+      border-radius: 5px;
       box-shadow: 2px 4px 4px #0000009F;
       color: #272626;
       cursor: pointer;
       font-size: 1.25rem;
-      padding: 16px;
+      padding: 12px;
+      margin-inline: 10px;
       width: 150px;
       
+      &:hover{
+        background-color: #97cfe6;
+      }
+
       &:active {
         background-color: #7CA6B7;
         box-shadow: 2px 2px 4px #0000009F inset;
