--- a/src/components/lista/Lista.module.scss
+++ b/src/components/lista/Lista.module.scss
@@ -55,3 +55,21 @@
   background-color: #5D677C;
   box-shadow: 2px 4px 4px black inset;
 }
+
+.itemCompleto {
+  background-color: #17b123;
+  box-shadow: 2px 4px 4px black inset;
+}
+
+.concluido {
+  display: block;
+  background-image: url('../../assets/img/check-mark.svg');
+  background-repeat: no-repeat;
+  background-size: 38px 38px;
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  transform: translateY(-50%);
+  width: 42px;
+  height: 43px;
+}
